<resources>
    <string name="app_name">Control Password</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_welcome_frag_reg_name">Bem vindo!</string>
    <string name="subtitle_frag_reg_name">Para começar,\ngostaríamos de saber seu nome</string>
    <string name="prompt_complete_name">NOME COMPLETO</string>
    <string name="action_continuous">CONTINUAR</string>
    <string name="prompt_email">E-MAIL</string>
    <string name="title_welcome_frag_reg_email">Prazer, Fernando!</string>
    <string name="subtitle_frag_reg_email">Para acessar sua conta, nos informe seu e-mail.</string>
    <string name="title_welcome_frag_reg_password">Isso fica entre nos</string>
    <string name="prompt_senha">SENHA</string>
    <string name="action_finalize">FINALIZAR</string>
    <string name="error_email_register">E-mail inválido</string>
    <string name="title_password_frag_reg">Para sua segurança,</string>
    <string name="subtitle_password_frag_reg">temos algumas regrinhas para criar sua senha!</string>
    <string name="prompt_password_registered">SENHA</string>
    <string name="warning_password_register">A senha deve ter pelo menos 10 caracteres. Use ao menos uma letra maiuscula/minuscula, um número e um caractere especial (!@#$%^&amp;*).</string>
    <string name="error_password_register">Use ao menos um número, uma letra e símbolo (!@#$%^&amp;*).</string>

    <string name="prompt_password">SENHA</string>
    <string name="login">ENTRAR</string>
    <string name="login_digital">ENTRAR COM DIGITAL</string>
    <string name="signup">CRIAR CONTA</string>
    <string name="txt_save_login">Lembrar dados</string>
    <string name="message_waiting">carregando...</string>
    <string name="error_save_user">Falha ao cadastrar usuário, tente novamente mais tarde!</string>

    <string name="error_login">Falha ao logar, tente novamente mais tarde!</string>

    <string name="error_validate_login">Para continuar favor informar seu nome e senha!</string>

    <string name="text_use_digital">Use a digital para facilitar seu login.</string>
    <string name="cancel">Cancelar</string>
    <string name="invalid_fingerprint">Impressão digital não reconhecida.</string>
    <string name="prompt_site">SITE</string>
    <string name="action_save">Salvar</string>
    <string name="action_remove">Remover</string>
    <string name="signup_sucesso">Site cadastrado com sucesso!</string>
    <string name="fields_required">Favor informar todos os campos para cadastrar!</string>
    <string name="title_perfil">Perfil</string>
    <string name="logout">Logout</string>


</resources>
