<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/screen_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingEnd="@dimen/big_gap"
        android:paddingStart="@dimen/big_gap">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/big_gap"
            android:layout_marginBottom="@dimen/medium_gap">

            <ImageView
                android:id="@+id/iv_logo_frag_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_lock_outline_white_48dp" />

            <TextView
                android:id="@+id/tv_title_frag_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo_frag_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:text="@string/app_name"
                android:theme="@style/DefaultLogin"
                android:textAllCaps="true"
                android:textStyle="bold"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/DefaultLogin"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorLogin">

                <EditText
                    android:id="@+id/input_email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/input_password1"
                    android:nextFocusForward="@+id/input_password1"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_gap"
                android:theme="@style/DefaultLogin"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorLogin"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <EditText
                    android:id="@+id/input_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_email1"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>


            <Switch
                android:id="@+id/saveLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_gap"
                android:text="@string/txt_save_login"
                android:textSize="@dimen/small_text_size"
                android:textColor="@android:color/white"
                android:theme="@style/DefaultLogin"
                android:layout_gravity="right"
                android:switchPadding="@dimen/default_gap"
                />


            <br.com.fernando.control_password.ui.widgets.CustomButton
                android:id="@+id/bt_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/big_gap"
                android:background="@drawable/btn_rounded_white"
                android:fontFamily="sans-serif"
                android:foreground="?android:attr/selectableItemBackground"
                android:letterSpacing="0.12"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_gap"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_digital"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0.12"
                    android:text="@string/login_digital"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/small_text_size"
                    />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0.12"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
