<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/screen_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingEnd="@dimen/big_gap"
            android:paddingStart="@dimen/big_gap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/input_site"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/prompt_site"
                        android:inputType="textEmailAddress"
                        android:isScrollContainer="true"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/input_email"
                        android:nextFocusForward="@+id/input_email"
                        android:textColor="@android:color/black"
                        android:backgroundTint="@android:color/black"
                        android:importantForAutofill="noExcludeDescendants"

                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_email1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:isScrollContainer="true"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/input_password1"
                        android:nextFocusForward="@+id/input_password1"
                        android:textColor="@android:color/black"
                        android:backgroundTint="@android:color/black"
                        android:importantForAutofill="noExcludeDescendants"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_gap"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/black">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/input_email"
                        android:backgroundTint="@android:color/black"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="noExcludeDescendants"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>


                <br.com.fernando.control_password.ui.widgets.CustomButton
                    android:id="@+id/bt_save"
                    style="@style/ButtonDefault"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/medium_gap"
                    android:text="@string/action_save" />

                <br.com.fernando.control_password.ui.widgets.CustomButton
                    android:id="@+id/bt_delete"
                    style="@style/ButtonDefault"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:text="@string/action_remove"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_digital"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/big_gap"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0.12"
                    android:text="@string/login_digital"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/small_text_size"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/big_gap"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0.12"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</ScrollView>
