<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.fragments.RegisterPasswordFragment">

    <ScrollView
        android:id="@+id/register_password_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/big_gap"
                android:paddingStart="@dimen/big_gap"
                android:paddingTop="@dimen/title_margin_top_fragments">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:paddingBottom="@dimen/subtitle_gap"
                        android:text="@string/title_password_frag_reg"
                        android:textColor="@color/colorSubtitle"
                        android:textSize="@dimen/big_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:lineSpacingExtra="@dimen/line_spacing_extra_subtitle"
                        android:text="@string/subtitle_password_frag_reg"
                        android:textColor="@color/colorSubtitle2"
                        android:textSize="@dimen/large_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/big_gap"
                    android:layout_marginTop="@dimen/big_gap"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/client_password_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="false"
                        app:hintTextAppearance="@style/primaryAppearanceTil"
                        app:passwordToggleTint="@color/colorTilHintActive">

                        <EditText
                            android:id="@+id/client_password_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:hint="@string/prompt_password_registered"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="12"
                            android:maxLines="1"
                            android:textColor="@color/colorSubtitle"
                            android:textColorHint="@color/text_input_layout_hint_color"
                            android:textSize="@dimen/normal_text_size" />

                        <TextView
                            android:id="@+id/warning_msg_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:lineSpacingExtra="@dimen/line_spacing_extra_tv_warning_password"
                            android:paddingEnd="5dp"
                            android:text="@string/warning_password_register"
                            android:textColor="@color/warning_password"
                            android:textSize="@dimen/small_text_size" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <br.com.fernando.control_password.ui.widgets.CustomButton
                    android:id="@+id/bt_finalize"
                    style="@style/ButtonDefault"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:text="@string/action_finalize" />

            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>
    </ScrollView>
</LinearLayout>
